--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button onclick="beginner()">Beginner</button>
     <button onclick="intermediate()">Intermediate</button>
     <button onclick="hard()">Hard</button>
+    <button onclick="onInit()">Play Again</button>
     <div class="timer-display">0</div>
     <div class="board-container"></div>
 
