--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button onclick="intermediate()">Intermediate</button>
     <button onclick="hard()">Hard</button>
     <button onclick="onInit()">Play Again ! 🤩</button>
+    <div class="modal"><button onclick="onInit()">💣</button></div>
     <div class="timer-display">0</div>
     <div class="board-container"></div>
 
