--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <button onclick="beginner()">Beginner</button>
     <button onclick="intermediate()">Intermediate</button>
     <button onclick="hard()">Hard</button>
-    <button onclick="onInit()">Play Again ! 🤩</button>
-    <div class="modal"><button onclick="onInit()">💣</button></div>
+    <button class="restart-btn" onclick="onInit()">Play Again ! 🤩</button>
     <div class="timer-display">0</div>
     <div class="board-container"></div>
 
