--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 
 <body onload="onInit()">
-    
+
     <h1>Minesweeper</h1>
     <button onclick="beginner()">Beginner</button>
     <button onclick="intermediate()">Intermediate</button>
     <button onclick="hard()">Hard</button>
     <button class="lives"></button>
     <button class="restart-btn" onclick="onInit()">🤪</button>
-    <div class="timer-display">0</div>
+    <div class="timer-display"></div>
+    <div class="mine-tapping"></div>
     <div class="board-container"></div>
 
 
