--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <button onclick="intermediate()">Intermediate</button>
     <button onclick="hard()">Hard</button>
     <button class="lives"></button>
+    <button onclick="darkMode()" class="dark-mode">Dark Mode</button>
+    <!-- <button onclick="hint()" class="hints">🗝🗝🗝</button> -->
     <button class="restart-btn" onclick="onInit()">🤪</button>
     <div class="timer-display"></div>
     <div class="mine-tapping"></div>
