--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
         <button onclick="hard()">Hard</button>
     </div>
 
-    <button class="lives"></button>
+    <div class="lives"></div>
 
-    <div class="hints"></div>
-
-    <button onclick="darkMode()">Dark Mode</button>
+    <!-- <button class="darkMode" onclick="darkMode()">Dark Mode</button> -->
     <button class="restart-btn" onclick="onInit()">🤪</button>
     <div class="timer-display"></div>
     <div class="mine-tapping"></div>
@@ -29,7 +27,12 @@
 
     <script src="js/index.js"></script>
     <script src="js/util.js"></script>
+
+    <!-- <button class="img" onclick="getHint(1)"><img src="img/hint-off.png" id="hint-1"></button>
+    <button class="img" onclick="getHint(2)"><img src="img/hint-off.png" id="hint-2"></button>
+    <button class="img" onclick="getHint(3)"><img src="img/hint-off.png" id="hint-3"></button> -->
+
 </body>
-<footer>© Created by Omri Gendler </footer>
+<footer style="margin-top: 15px;">© Created by Omri Gendler </footer>
 
 </html>
