--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 
     <div class="lives"></div>
 
-    <!-- <button class="darkMode" onclick="darkMode()">Dark Mode</button> -->
+    <button class="darkMode" onclick="darkMode(this)">Dark Mode</button>
+
     <button class="restart-btn" onclick="onInit()">🤪</button>
+
+    <button class="safe-click" onclick="safeClick()">safe click</button>
+
     <div class="timer-display"></div>
     <div class="mine-tapping"></div>
     <div class="board-container"></div>
@@ -28,9 +32,10 @@
     <script src="js/index.js"></script>
     <script src="js/util.js"></script>
 
-    <!-- <button class="img" onclick="getHint(1)"><img src="img/hint-off.png" id="hint-1"></button>
-    <button class="img" onclick="getHint(2)"><img src="img/hint-off.png" id="hint-2"></button>
-    <button class="img" onclick="getHint(3)"><img src="img/hint-off.png" id="hint-3"></button> -->
+    <button class="img" onclick="renderHint(1)"><img src="img/hint-off.png" id="hint-1"></button>
+    <button class="img" onclick="renderHint(2)"><img src="img/hint-off.png" id="hint-2"></button>
+    <button class="img" onclick="renderHint(3)"><img src="img/hint-off.png" id="hint-3"></button>
+    <button id="result"></button>
 
 </body>
 <footer style="margin-top: 15px;">© Created by Omri Gendler </footer>
