--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <button class="restart-btn" onclick="onInit()">🤪</button>
 
-    <button class="safe-click" onclick="safeClick()">safe click</button>
+    <!-- <button class="safe-click" onclick="safeClick()">safe click</button> -->
 
     <div class="timer-display"></div>
     <div class="mine-tapping"></div>
@@ -32,10 +32,10 @@
     <script src="js/index.js"></script>
     <script src="js/util.js"></script>
 
-    <button class="img" onclick="renderHint(1)"><img src="img/hint-off.png" id="hint-1"></button>
-    <button class="img" onclick="renderHint(2)"><img src="img/hint-off.png" id="hint-2"></button>
-    <button class="img" onclick="renderHint(3)"><img src="img/hint-off.png" id="hint-3"></button>
-    <button id="result"></button>
+    <button class="img" onclick="onHintTap(1)"><img src="img/hint-off.png" id="hint-1"></button>
+    <button class="img" onclick="onHintTap(2)"><img src="img/hint-off.png" id="hint-2"></button>
+    <button class="img" onclick="onHintTap(3)"><img src="img/hint-off.png" id="hint-3"></button>
+    <!-- <button id="result"></button> -->
 
 </body>
 <footer style="margin-top: 15px;">© Created by Omri Gendler </footer>
