--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <script src="js/index.js"></script>
     <script src="js/util.js"></script>
 
-    <button class="img" onclick="onHintTap(1)"><img src="img/hint-off.png" id="hint-1"></button>
+    <!-- <button class="img" onclick="onHintTap(1)"><img src="img/hint-off.png" id="hint-1"></button>
     <button class="img" onclick="onHintTap(2)"><img src="img/hint-off.png" id="hint-2"></button>
-    <button class="img" onclick="onHintTap(3)"><img src="img/hint-off.png" id="hint-3"></button>
+    <button class="img" onclick="onHintTap(3)"><img src="img/hint-off.png" id="hint-3"></button> -->
     <!-- <button id="result"></button> -->
 
 </body>
