--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <button class="img" onclick="onHintTap(2)"><img src="img/hint-off.png" id="hint-2"></button>
     <button class="img" onclick="onHintTap(3)"><img src="img/hint-off.png" id="hint-3"></button> -->
     <!-- <button id="result"></button> -->
-
+    <button class="undo" onclick="undo(this)">Undo</button>
 </body>
 <footer style="margin-top: 15px;">© Created by Omri Gendler </footer>
 
